--- a/collatz_calculus_v9.tex
+++ b/collatz_calculus_v9.tex
@@ -4834,7 +4834,10 @@ Forward check with $U(n)=(3n+1)/2^{v_2(3n+1)}$ gives $U(185)=139$, $U(139)=209$.
           \item \emph{Congruence regime:} ensure the last-row congruence is solvable (Lemma on congruence targeting).
         \end{itemize}
   \item \textbf{Bit-lift and parity.} If needed, use same-family padding blocks to raise $v_2(A)$ and the 2-token same-family cycle to toggle $B\bmod 2$ without changing family (Section~\ref{sec:menu-all-p}).
-  \item \textbf{Solve $m$-class.} In the congruence regime, solve $a^{(p)}m\equiv r^{(p)}\pmod{M_K}$ for $m$; in the pinning regime, any $m$ works. Intersect with the class from Lemma~\ref{lem:routing-compat}.
+  \item \textbf{Solve $m$-class.}
+    In the congruence regime, solve $a^{(p)}m\equiv r^{(p)}\pmod{M_K}$ for $m$; in the pinning regime, any $m$ works.
+    Intersect this solution class with the routing class from Lemma~\ref{lem:routing-compat}.
+    \emph{(Note: These classes are guaranteed to have a non-empty intersection by the Chinese Remainder Theorem for powers of two, because the base witness at $M_3=24$ already ensures consistency at the lower modulus.)}
   \item \textbf{Output.} The resulting finite word $W$ and index $m$ satisfy $x_W(m)=x$ and the forward accelerated map reaches $1$ along $W$.
 \end{enumerate}
 
@@ -6330,31 +6333,33 @@ Indices follow from the explicit form of $x_{\mathrm{prev}}$.
 \end{proof}
 
 \begin{algorithm}[H]
-\caption{Reverse-One-Step-Unbounded-$p$($y$) (row-consistent)}
-\label{alg:reverse-one-step-unbounded-p}
+\caption{Reverse-Until\texorpdfstring{$(y_0,\text{stop},p)$}{(y0, stop, p)}}
+\label{alg:reverse-until-refined}
 \begin{algorithmic}[1]
-\Require odd $y \equiv 1$ or $5 \pmod{6}$
-\For{each row $(s,j,\alpha,\beta,c,\delta)$ with $\delta \equiv y \pmod{6}$}
-  \State $T \gets (y - \delta)/6$ \Comment{$T \in \mathbb{Z}$}
-  \For{$p \gets 0,1,2,\ldots$}
-    \If{$\beta \cdot 64^{p} + c > 9T$}
-      \State \textbf{break} \Comment{early stop for this row}
-    \EndIf
-    \If{$(\beta \cdot 64^{p} + c) \bmod 9 = 0$}
-      \State $k_p \gets (\beta \cdot 64^{p} + c)/9$
-      \State $t \gets T - k_p$
-      \If{$t \ge 0$ \textbf{and} $\, t \bmod 2^{\alpha+6p} = 0$}
-        \State $m \gets t / 2^{\alpha+6p}$
-        \State $p_6 \gets \text{1 if } s=\mathrm{e} \text{ else } 5$
-        \State $x \gets 18m + 6j + p_6$
-        \If{$U(y)=x$ \textbf{and} $\, (\,s(x),\, \lfloor x/6\rfloor \bmod 3\,) = (\,s,\,j\,)$}
-          \State \Return $x$ \Comment{legal parent found}
-        \EndIf
-      \EndIf
-    \EndIf
-  \EndFor
-\EndFor
-\State \Return \textbf{fail}
+\Require odd start $y_0$, target ancestor $\text{stop}$ (e.g.\ $1$), lift $p\ge 0$
+\State $y\gets y_0$; \textsc{Log}$\gets [\,]$
+\While{$y\neq \text{stop}$}
+  \State $x \gets$ \Call{Reverse-One-Step}{$(y,p)$}
+
+  \If{$x$ is \textbf{fail}}
+    \State \Comment{Fallback: try 1-layer same-family padding}
+    \State $found \gets \mathbf{false}$
+    \For{each padding gadget $G$ compatible with family of $y$}
+        \For{each row $R$ admissible after $G$}
+            \State Attempt to solve composite step $y \leftarrow R \leftarrow G \leftarrow x$
+            \If{solution $m \ge 0$ found}
+                \State $x \gets \text{parent}(m)$; $found \gets \mathbf{true}$
+                \State \textbf{break}
+            \EndIf
+        \EndFor
+        \If{$found$} \textbf{break} \EndIf
+    \EndFor
+    \If{\textbf{not} $found$} \State \Return \textbf{fail} \EndIf
+  \EndIf
+
+  \State append $(y\leftarrow x)$ to \textsc{Log}; \ $y\gets x$
+\EndWhile
+\State \Return \textsc{Log}
 \end{algorithmic}
 \end{algorithm}
 
